--- a/package.json
+++ b/package.json
@@ -19,5 +19,7 @@
     "url": "https://github.com/abnazhor/Palathea/issues"
   },
   "homepage": "https://github.com/abnazhor/Palathea#readme",
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@abnazhor"
+  }
 }
