--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@abnazhor/palathea",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Simple assistant for daily tasks. Written in Node.js",
-  "main": "src/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
