--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple assistant for daily tasks. Written in Node.js",
   "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,7 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/r"
   },
-  "type": "module"
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
